Removed the soft delete functionality. Reworked the Visit entity to not have SickLeave twice. Reworked the unit and integration tests inline with the new structure.